--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@types/faker": "^5.5.8",
+    "@types/jest": "^27.0.2",
     "faker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
