--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "~12.2.0",
     "@types/faker": "^5.5.8",
     "@types/jest": "^27.0.2",
+    "ansi-regex": "5.0.1",
     "faker": "^5.5.3",
+    "glob-parent": "5.1.2",
     "rxjs": "~6.6.0",
+    "set-value": "4.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
